# modern-opengl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: Animation.h  Animator.h  AssimpImport.h  Mesh3D.h  Object3D.h  RotationAnimation.h  ShaderProgram.h  StbImage.h  Texture.h  stb_image.h
models/Cube/: cube.mtl
models/Tiger/: tiger_I.mtl
models/moon/: material.lib
shaders/: all_green.frag  light_perspective.vert  lighting.frag  no_transform.vert  simple_perspective.vert  texture_perspective.vert  texturing.frag  uniform_color.frag
src/: Animator.cpp  AssimpImport.cpp  Mesh3D.cpp  Object3D.cpp  ShaderProgram.cpp  StbImage.cpp  main.cpp
